# scaffolding

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
assets/: scaffolding-tui.tape  shared.tape  shiny-tui.tape  todo.tape
benchmarks/: Cargo.toml
benchmarks/src/: arenavec.rs  lib.rs  mutations.rs  stackvec.rs  type_map.rs
examples/gui/: Cargo.toml
examples/gui/src/: main.rs
examples/shiny-tui/: Cargo.toml  README.md
examples/shiny-tui/src/: main.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
plugins/scaffolding-tui/: Cargo.toml  README.md
plugins/scaffolding-tui/src/: input.rs  keys.rs  lib.rs  msg.rs  os.rs  runloop.rs  shapes.rs  terminal.rs  widgets.rs
plugins/scaffolding-tui/src/os/: unix.rs  windows.rs
plugins/scaffolding-tui/src/os/windows/: ffi.rs
plugins/scaffolding-tui/src/widgets/: api.rs  button.rs  checkbox.rs  included.rs  text.rs  textinput.rs
plugins/scaffolding-ui/: Cargo.toml  README.md
plugins/scaffolding-ui/src/: display.rs  lib.rs
plugins/scaffolding-ui/src/display/: platform.rs
scaffolding/: Cargo.toml
scaffolding/src/: datatypes.rs  lib.rs  multi.rs  os.rs  utils.rs  world.rs
scaffolding/src/datatypes/: arenavec.rs  stackvec.rs  typemap.rs  uniq.rs  warehouse.rs
scaffolding/src/os/: linux.rs  mac.rs  unix_common.rs  windows.rs
scaffolding/src/world/: executable.rs  executable_args.rs  mutation.rs  plugin.rs
scaffolding/tests/: uniq.rs
website/: README.md  hugo.toml
website/content/: index.html
website/layouts/_default/: home.html
(+5 files in other folders)
