[workspace]
members = [
    "examples/gui", "examples/shiny-tui",
    "examples/todo",
    "plugins/scaffolding-tui",
    "plugins/scaffolding-ui",
    "scaffolding",
]
exclude = ["benchmarks"]
resolver = "2"

[workspace.dependencies]
scaffolding = { path = "scaffolding", default-features = false, features = [] }
scaffolding-tui = { path = "plugins/scaffolding-tui" }
