[package]
name = "scaffolding"
version = "0.1.0"
edition = "2021"

[features]
default = ["multi"]
multi = ["std"]
std = []
debugger = []
os-allocator = []

[target.'cfg(target_family="unix")'.dependencies]
libc = "0.2"

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = [
    "compile-time-rng",
] }
